modify:add produce detail page

--- a/src/pages/mixingplant/index.html
+++ b/src/pages/mixingplant/index.html
@@ -107,40 +107,43 @@
 
     <!-- 产品+案例 -->
     <!-- 35 -->
-    <div class="produce_list">
-      <div class="item_img">
-        <div class="item_img_box box_1"></div>
+    <a href="35detail.html">
+      <div class="produce_list">
+        <div class="item_img">
+          <div class="item_img_box box_1"></div>
+        </div>
+        <div class="content">
+          <div class="name">
+            HZS35混凝土搅拌站
+          </div>
+          <div class="introduce">
+            <span class="title">生产能力：</span>
+            <span class="words">35m³/h</span>
+          </div>
+          <div class="introduce">
+            <span class="title">设备特点：</span>
+            <span class="words">HZS系列混凝土搅拌站集成化设计，具有高效、节能环保、计量准确、智能控制、操作方便、稳定 可靠、性价比高等优点。</span>
+          </div>
+          <div class="introduce">
+            <span class="title">产品介绍：</span>
+            <span class="words">
+              HZS35混凝土搅拌站也叫做简易型HZS35搅拌站。HZS3535搅拌站使用的是每次出料0.75方混凝土搅拌机(JS750)，每次循环周期为72秒，配合配料机
+              后，理论生产率为35m3/h。HZS35简易搅拌站采用全自动化配置，由物料输送带、搅拌主机、配料机相结合组成。
+              采用组合式结构、单元模块化，安装、搬迁十分方便。
+              HZS35型混凝土搅拌站骨料配料采用PLD1600混凝土配料机，计量准确，生产效率高，被广泛用于高速公路、桥梁、电站、筑坝工程等存在野外施工作业的工程。
+            </span>
+          </div>
+          <div class="introduce">
+            <span class="title">客户案例：</span>
+            <span class="words">
+              多源公司利用我们的搅拌站设备，在保证混凝土质量的同时，显著提高了生产效率，成功应对了复杂的地质和气候条件。
+              该项目的成功不仅强化了多源公司在铁路建设领域的领导地位，也进一步巩固了我们作为可靠搅拌设备供应商的声誉。
+            </span>
+          </div>
+        </div>
       </div>
-      <div class="content">
-        <div class="name">
-          HZS35混凝土搅拌站
-        </div>
-        <div class="introduce">
-          <span class="title">生产能力：</span>
-          <span class="words">35m³/h</span>
-        </div>
-        <div class="introduce">
-          <span class="title">设备特点：</span>
-          <span class="words">HZS系列混凝土搅拌站集成化设计，具有高效、节能环保、计量准确、智能控制、操作方便、稳定 可靠、性价比高等优点。</span>
-        </div>
-        <div class="introduce">
-          <span class="title">产品介绍：</span>
-          <span class="words">
-            HZS35混凝土搅拌站也叫做简易型HZS35搅拌站。HZS3535搅拌站使用的是每次出料0.75方混凝土搅拌机(JS750)，每次循环周期为72秒，配合配料机
-            后，理论生产率为35m3/h。HZS35简易搅拌站采用全自动化配置，由物料输送带、搅拌主机、配料机相结合组成。
-            采用组合式结构、单元模块化，安装、搬迁十分方便。
-            HZS35型混凝土搅拌站骨料配料采用PLD1600混凝土配料机，计量准确，生产效率高，被广泛用于高速公路、桥梁、电站、筑坝工程等存在野外施工作业的工程。
-          </span>
-        </div>
-        <div class="introduce">
-          <span class="title">客户案例：</span>
-          <span class="words">
-            多源公司利用我们的搅拌站设备，在保证混凝土质量的同时，显著提高了生产效率，成功应对了复杂的地质和气候条件。
-            该项目的成功不仅强化了多源公司在铁路建设领域的领导地位，也进一步巩固了我们作为可靠搅拌设备供应商的声誉。
-          </span>
-        </div>
-      </div>
-    </div>
+    </a>
+
     <!-- 50 -->
     <div class="produce_list">
       <div class="item_img">
