--- a/src/pages/35detail/index.html
+++ b/src/pages/35detail/index.html
@@ -17,7 +17,7 @@
         <div class="header-content">
             <h1 class="logo">
                 <a class="logolink" href="homepage.html">
-                    <!-- <img id="logo-img" src="../../../public/images/face/concmix-logo-teal.png"> -->
+                    <img id="logo-img" src="../../../public/images/productions/concmix-logo.png">
                 </a>
             </h1>
 
@@ -153,80 +153,7 @@
             <div class="common_title">
                 产品参数
             </div>
-            <table width="100%" cellspacing="1" cellpadding="3"
-                style="font-size:12px; text-align:center; line-height:25px;">
-                <tbody>
-                    <tr>
-                        <td rowspan="6" class="td1">整站部分</td>
-                        <td class="tr1">型号</td>
-                        <td class="tr1">HZS35</td>
-                    </tr>
-                    <tr>
-                        <td> 理论生产率（m3/h）</td>
-                        <td>35</td>
-                    </tr>
-                    <tr class="tr1">
-                        <td> 标准出料高度（m）</td>
-                        <td>1.6—3.8</td>
-                    </tr>
-                    <tr>
-                        <td> 工作循环时间（s）</td>
-                        <td>72</td>
-                    </tr>
-                    <tr class="tr1">
-                        <td> 外形尺寸（mm）（长X宽X高）</td>
-                        <td>12922x13000x17245</td>
-                    </tr>
-                    <tr>
-                        <td> 总装机容量（kw）</td>
-                        <td>75</td>
-                    </tr>
-                    <tr class="tr1">
-                        <td class="td1"> 搅拌机部分</td>
-                        <td>型号</td>
-                        <td>JS750</td>
-                    </tr>
-                    <tr>
-                        <td class="td1"> 配料机部分</td>
-                        <td>型号</td>
-                        <td>PLD1200</td>
-                    </tr>
-                    <tr class="tr1">
-                        <td rowspan="4" class="td1"> 气动系统</td>
-                        <td> 空压机型号</td>
-                        <td>1.0-7</td>
-                    </tr>
-                    <tr>
-                        <td> 额定排气量（m3/min）</td>
-                        <td> 1.67</td>
-                    </tr>
-                    <tr class="tr1">
-                        <td> 额定排气压力（MPa）</td>
-                        <td> 0.8</td>
-                    </tr>
-                    <tr>
-                        <td> 电机功率（KW）</td>
-                        <td>5.5</td>
-                    </tr>
-                    <tr class="tr1">
-                        <td colspan="4" height="160" class="td1"> 称重系统</td>
-                        <td> 砂石计量精度范围（kg）精度</td>
-                        <td> +_2%</td>
-                    </tr>
-                    <tr>
-                        <td> 水泥计量精度范围（kg）精度</td>
-                        <td> +_1% +_1%</td>
-                    </tr>
-                    <tr class="tr1">
-                        <td> 水计量精度范围（kg）精度</td>
-                        <td> +_1% </td>
-                    </tr>
-                    <tr>
-                        <td> 添加剂计量精度范围（kg）精度</td>
-                        <td> +_2% </td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="product_param"></div>
             <div class="annotation">
                 <span style="font-weight: bold;">注</span>
                 <span>技术参数如有变动，恕不另行通知。Any change of technical data shall not be advised additionally.</span>
@@ -237,11 +164,13 @@
             </div>
             <div class="case_list">
                 <di class="case_list_item">
-                    <img src="../../../public/images/productions/dc_35_1.jpg" alt="" width="580px" height="356px">
+                    <!-- <img src="../../../public/images/productions/dc_35_1.jpg" alt="" width="580px" height="356px"> -->
+                    <div class="case_list_item_one case_list_item_img"></div>
                     <span>hzs35型混凝土搅拌站长城建机山东济南35方搅拌站</span>
                 </di>
                 <di class="case_list_item">
-                    <img src="../../../public/images/productions/dc_35_2.jpg" alt="" width="580px" height="356px">
+                    <div class="case_list_item_two case_list_item_img"></div>
+                    <!-- <img src="../../../public/images/productions/dc_35_2.jpg" alt="" width="580px" height="356px"> -->
                     <span>乌兹别克斯坦双HZS35商混站</span>
                 </di>
             </div>
