--- a/src/pages/homepage/index.html
+++ b/src/pages/homepage/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>郑州兴隆</title>
+    <title>concmix </title>
     <link rel="bookmark" type="image/x-icon" href="https://cdn.histomed.com/index/img/favicon.ico"
         mce_href="https://cdn.histomed.com/index/index/img/favicon.ico">
     <link rel="icon" type="image/x-icon" href="https://cdn.histomed.com/index/img/favicon.ico"
@@ -22,7 +22,7 @@
             <div class="header-content">
                 <h1 class="logo">
                     <a class="logolink" href="javascript: void(0)">
-                        <!-- <img id="logo-img" src="../../../public/images/face/concmix-logo-white.png"> -->
+                        <img id="logo-img" src="../../../public/images/productions/concmix-logo.png">
                     </a>
                 </h1>
                 <ul class="nav layui-nav">
@@ -152,8 +152,7 @@
 
         <!-- 设计banner -->
         <div class="middle_banner">
-            <img class="middle_banner_img" src="../../../public/images/productions/banner1.jpg" alt="" width="100%"
-                height="400px">
+            <div class="middle_banner_img"></div>
             <div class="middle_banner_box">
                 <div class="item">
                     <h2 class="one">
@@ -217,14 +216,14 @@
         <!-- 公司简介 -->
         <div class="baseInfo">
             <div class="baseInfo_main">
-                <img src="../../../public/images/productions/plant3.jpg" alt="" width="600px" height="406px">
+                <div class="baseInfo_img"></div>
                 <div class="baseInfo_box">
                     <div class="baseInfo_title">关于我们</div>
                     <div class="baseInfo_company">
-                        郑州市兴隆机器制造有限公司
+                        郑州市concmix机器制造有限公司
                     </div>
                     <div class="baseInfo_content">
-                        郑州市兴隆机器制造有限公司是国内制造、研发建筑机械的大型专业企业之
+                        郑州市concmix机器制造有限公司是国内制造、研发建筑机械的大型专业企业之
                         一。公司自1983年正式成立，至今已有36年。
                         公司自创建以来，一直秉承科技兴企，以人为本和诚信为本的宗旨，保证为客户提供优质的产品，
                         在全球多个国家和地区都享有盛誉。
