--- a/src/pages/mixingplant/index.html
+++ b/src/pages/mixingplant/index.html
@@ -17,7 +17,7 @@
     <div class="header-content">
       <h1 class="logo">
         <a class="logolink" href="homepage.html">
-          <!-- <img id="logo-img" src="../../../public/images/face/concmix-logo-teal.png"> -->
+          <img id="logo-img" src="../../../public/images/productions/concmix-logo.png">
         </a>
       </h1>
 
