--- a/src/pages/homepage/index.html
+++ b/src/pages/homepage/index.html
@@ -5,12 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>concmix </title>
-    <link rel="bookmark" type="image/x-icon" href="https://cdn.histomed.com/index/img/favicon.ico"
-        mce_href="https://cdn.histomed.com/index/index/img/favicon.ico">
-    <link rel="icon" type="image/x-icon" href="https://cdn.histomed.com/index/img/favicon.ico"
-        mce_href="https://cdn.histomed.com/index/index/img/favicon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.histomed.com/index/img/favicon.ico"
-        mce_href="https://cdn.histomed.com/index/index/img/favicon.ico">
+    <!-- <link rel="icon" type="image/x-icon" href="https://cdn.histomed.com/index/img/favicon.ico"
+        mce_href="https://cdn.histomed.com/index/index/img/favicon.ico"> -->
     <style>
     </style>
 </head>
