modify:图片替换为阿里云资源服务链接

--- a/src/pages/35detail/index.html
+++ b/src/pages/35detail/index.html
@@ -11,7 +11,7 @@
         <div class="header-content">
             <h1 class="logo">
                 <a class="logolink" href="homepage.html">
-                    <img id="logo-img" src="../../../public/images/productions/concmix-logo.png">
+                    <img id="logo-img" src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/concmix-logo.png">
                 </a>
             </h1>
 
@@ -176,12 +176,21 @@
             <div class="container-info">
                 <div class="info-group">
                     <div class="info-logo">
-                        <img id="logo-img" src="../../../public/images/face/concmix-logo-white.png" alt="">
+                        <img id="logo-img"
+                            src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/concmix-logo-white.png" alt="">
                     </div>
                     <div class="info-tel">(86)18339821170</div>
 
                 </div>
                 <div class="info-detail">
+                    <!-- <div class="detail-item">
+                        <div class="item-title">关于Concmix</div>
+                        <div class="item-piece"><a href="centerIntroduction.html">中心介绍</a> </div>
+                        <div class="item-piece"><a href="expertTeam.html">Concmix专家</a> </div>
+                        <div class="item-piece"><a href="aboutHonor.html">资质荣誉</a> </div>
+                        <div class="item-piece"><a href="aboutPartner.html">合作伙伴</a> </div>
+                        <div class="item-piece"><a href="joinus.html">加入我们</a> </div>
+                    </div> -->
                     <div class="detail-item">
                         <div class="item-title">产品</div>
                         <div class="item-piece"> <a href="mixingplant.html">混凝土搅拌站</a></div>
@@ -197,8 +206,6 @@
                         <div class="item-piece"><a
                                 href="https://www.douyin.com/user/MS4wLjABAAAA8kZ_Jqf0FxD2gfOSM7IMsfhBslHU-rJnslhtTiFffuw"
                                 target="blank">抖音</a> </div>
-                        <!-- <div class="item-piece"><a href="concomitantDiagnosis.html">伴随诊断</a> </div>
-                      <div class="item-piece"><a href="digitalSolution.html">数字化病理解决方案</a> </div> -->
                     </div>
                     <div class="detail-item">
                         <div class="item-title">扫码关注更多</div>
@@ -206,7 +213,8 @@
                         <div class="code-img-box">
                             <div class="img-group">
                                 <div class="img-box">
-                                    <img src="../../../public/images/face/whatsAPP.png" alt="">
+                                    <img src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/whatsAPP.png"
+                                        alt="">
                                 </div>
                                 <div class="code-info">whatsAPP</div>
                             </div>
@@ -217,12 +225,14 @@
             <div class="container-link">
                 <p class="footer-bot">
                     <span>联系我们</span>
-                    <span class="contact-item"><img style="width: 10px;" src="../../assets/images/location-white.svg"
-                            alt="">
+                    <span class="contact-item"><img style="width: 10px;"
+                            src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/location-white.svg" alt="">
                         中国河南省郑州市</span>
-                    <span class="contact-item"> <img style="width: 16px;" src="../../assets/images/email-white.svg"
+                    <span class="contact-item"> <img style="width: 16px;"
+                            src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/email-white.svg"
                             alt="">concmix@outlook.com</span>
-                    <span class="contact-item"><img style="width: 10px;" src="../../assets/images/tel-white.svg"
+                    <span class="contact-item"><img style="width: 10px;"
+                            src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/tel-white.svg"
                             alt="">(86)18339821170</span>
 
                 </p>
