--- a/src/pages/homepage/index.html
+++ b/src/pages/homepage/index.html
@@ -18,7 +18,7 @@
             <div class="header-content">
                 <h1 class="logo">
                     <a class="logolink" href="javascript: void(0)">
-                        <img id="logo-img" src="../../../public/images/productions/concmix-logo.png">
+                        <img id="logo-img" src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/concmix-logo.png">
                     </a>
                 </h1>
                 <ul class="nav layui-nav">
@@ -46,7 +46,7 @@
                 height: 100%;" src="../../../public/images/productions/plant1_out.jpg" alt=""> -->
                 <img style="width: 100%;
                  background-size: cover;
-                 height: 100%;" src="https://mengke-test.oss-cn-hangzhou.aliyuncs.com/home_banner.jpg" alt="">
+                 height: 100%;" src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/home-banner.jpg" alt="">
             </div>
             <div class="banner-cover">
                 <!-- <img class="banner-title" src="../../assets/images/banner-title.png" alt=""> -->
@@ -90,7 +90,7 @@
                     <div class="swiper-slide">
                         <div class="slide-container">
                             <div class="platform-img-box">
-                                <img src="../../../public/images/productions/JS500.jpg" alt="">
+                                <img src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/JS500.jpg" alt="">
                             </div>
                             <div class="slide-desc">
                                 <div class="slide-title">JS500混凝土搅拌机</div>
@@ -101,7 +101,7 @@
                     <div class="swiper-slide">
                         <div class="slide-container">
                             <div class="platform-img-box">
-                                <img src="../../../public/images/productions/JS700.jpg" alt="">
+                                <img src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/JS700.jpg" alt="">
                             </div>
                             <div class="slide-desc">
                                 <div class="slide-title">JS700强制搅拌机</div>
@@ -112,7 +112,7 @@
                     <div class="swiper-slide">
                         <div class="slide-container">
                             <div class="platform-img-box">
-                                <img src="../../../public/images/productions/JS1000.jpg" alt="">
+                                <img src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/JS1000.jpg" alt="">
                             </div>
                             <div class="slide-desc">
                                 <div class="slide-title">JS1000混凝土搅拌机</div>
@@ -123,7 +123,7 @@
                     <div class="swiper-slide">
                         <div class="slide-container">
                             <div class="platform-img-box">
-                                <img src="../../../public/images/productions/home_HZS60.jpg" alt="">
+                                <img src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/home_HZS60.jpg" alt="">
                             </div>
                             <div class="slide-desc">
                                 <div class="slide-title">HZS60型搅拌站</div>
@@ -133,7 +133,7 @@
                     <div class="swiper-slide">
                         <div class="slide-container">
                             <div class="platform-img-box">
-                                <img src="../../../public/images/productions/home_HZS120.jpg" alt="">
+                                <img src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/home_HZS120.jpg" alt="">
                             </div>
                             <div class="slide-desc">
                                 <div class="slide-title">HZS120型搅拌站</div>
@@ -148,7 +148,8 @@
 
         <!-- 设计banner -->
         <div class="middle_banner">
-            <div class="middle_banner_img"></div>
+            <div class="middle_banner_img">
+            </div>
             <div class="middle_banner_box">
                 <div class="item">
                     <h2 class="one">
@@ -212,7 +213,8 @@
         <!-- 公司简介 -->
         <div class="baseInfo">
             <div class="baseInfo_main">
-                <div class="baseInfo_img"></div>
+                <div class="baseInfo_img">
+                </div>
                 <div class="baseInfo_box">
                     <div class="baseInfo_title">关于我们</div>
                     <div class="baseInfo_company">
@@ -235,7 +237,8 @@
             <div class="case_box">
                 <div class="case_item">
                     <div class="case_item_img">
-                        <img src="../../../public/images/productions/DY_1.jpg" alt="" width="520px" height="300px">
+                        <img src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/DY_1.jpg" alt="" width="520px"
+                            height="300px">
                     </div>
                     <div class="case_item_title">
                         多源公司成功案例
@@ -244,7 +247,8 @@
 
                 <div class="case_item">
                     <div class="case_item_img">
-                        <img src="../../../public/images/productions/LY_1.jpg" alt="" width="520px" height="300px">
+                        <img src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/LY_1.jpg" alt="" width="520px"
+                            height="300px">
                     </div>
                     <div class="case_item_title">
                         临沂铭金建材有限公司
@@ -253,7 +257,8 @@
 
                 <div class="case_item">
                     <div class="case_item_img">
-                        <img src="../../../public/images/productions/GX_1.jpg" alt="" width="520px" height="300px">
+                        <img src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/GX_1.jpg" alt="" width="520px"
+                            height="300px">
                     </div>
                     <div class="case_item_title">
                         广西路桥集团成功案例
@@ -267,206 +272,14 @@
 
         </div>
 
-
-
-
-        <!-- 解决方案 -->
-        <!-- <div class="solution-box">
-            <div class="solution">
-                <div class="swiper-container2">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <img src="../../../public/images/productions/banner1.jpg" alt="">
-                            <div class="solution-content">
-                                <div class="solution-title">解决方案</div>
-                                <div class="content-title">县级医院病理科共建</div>
-                                <div class="content-desc">协助医院建设管理规范、项目齐全、质量控制严格的高水平病理科</div>
-                                <a class="learn-more" href="concretePlant.html">了解更多 > </a>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="../../../public/images/productions/banner1.jpg" alt="">
-                            <div class="solution-content">
-                                <div class="solution-title">解决方案</div>
-                                <div class="content-title">伴随诊断</div>
-                                <div class="content-desc">基于先进完备的病理技术平台，提供多种伴随诊断服务</div>
-                                <a class="learn-more" href="concomitantDiagnosis.html">了解更多 > </a>
-
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="../../../public/images/productions/banner1.jpg" alt="">
-                            <div class="solution-content">
-                                <div class="solution-title">解决方案</div>
-                                <div class="content-title">医联体共建</div>
-                                <div class="content-desc">充分整合并开放资源，建设紧密型病理医共体</div>
-                                <a class="learn-more" href="concreteMix.html">了解更多 > </a>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="../../../public/images/productions/banner1.jpg" alt="">
-                            <div class="solution-content">
-                                <div class="solution-title">解决方案</div>
-                                <div class="content-title">精准医学中心共建</div>
-                                <div class="content-desc">为合作医院量身定制配套的各项鉴别诊断和伴随诊断项目</div>
-                                <a class="learn-more" href="spareParts.html">了解更多 > </a>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="../../../public/images/productions/banner1.jpg" alt="">
-                            <div class="solution-content">
-                                <div class="solution-title">解决方案</div>
-                                <div class="content-title">数字化病理解决方案</div>
-                                <div class="content-desc">病理数字化解决方案，助力病理科数字化转型升级</div>
-                                <a class="learn-more" href="digitalSolution.html">了解更多 > </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                </div>
-            </div>
-        </div> -->
-        <!-- 患者服务与教育平台 -->
-        <!-- <div class="service-education">
-            <div class="service">
-                <div class="img-box">
-                    <img class="service-img"
-                        src="https://wsi.oss-cn-shanghai.aliyuncs.com/images/appendix/1612319895781fHyWiR/service.jpg"
-                        alt="">
-                </div>
-                <div class="service-content">
-                    <div class="content-engtitle">Patient services</div>
-                    <div class="content-cntitle">患者服务</div>
-                    <div class="content-desc">检测项目可直接在线申请，方便快捷，检测报告电子版和纸质版均可在线查询</div>
-                    <a class="btn service-btn" href="patientService.html">
-                        <span>了解更多</span>
-                    </a>
-                </div>
-            </div>
-            <div class="service education">
-                <div class="img-box">
-                    <img class="education-img"
-                        src="https://wsi.oss-cn-shanghai.aliyuncs.com/images/appendix/1612684639123PmSAgS/homepage-education.jpg"
-                        alt="">
-                </div>
-                <div class="service-content">
-                    <div class="content-engtitle">Academy and education</div>
-                    <div class="content-cntitle">学术与教育</div>
-                    <div class="content-desc">“Concmix病理”公众号和“Concmix研习社”病理诊断方面的专业知识和网络课程</div>
-                    <a class="btn education-btn" href="education.html">
-                        <span>了解更多</span>
-                    </a>
-                </div>
-            </div>
-        </div> -->
-        <!-- Concmix动态  -->
-        <!-- <div class="activity">
-            <div class="activity-title">Concmix动态</div>
-            <div class="activity-content">
-                <div class="img-box">
-                    <a class="hot-img active" href="activity1.html"><img
-                            src="../../../public/images/productions/plant3.jpg" alt=""></a>
-                    <a class="hot-img " href="activity2.html"><img src="../../../public/images/productions/plant3.jpg"
-                            alt=""></a>
-                    <a class="hot-img " href="activity3.html"> <img src="../../../public/images/productions/plant3.jpg"
-                            alt=""></a>
-                    <a class="hot-img " href="activity4.html"><img src="../../../public/images/productions/plant3.jpg"
-                            alt=""></a>
-                </div>
-                <div class="activity-info">
-                    <div class="hot-activity active">
-                        <div class="date"> <span class="day">10</span> <span class="month">2020/09</span></div>
-                        <div class="title">Concmix病理全数字化新方案亮相县域健康大会</div>
-                        <div class="desc">
-                            由王陇德院士发起并担任主席，葛均波院士、王辰院士、宁光院士、赫捷院士、李兆申院士、刘志红院士联合发起并任联合主席的「中国县域医院院长联盟」（以下简称「联盟」）第三次年会于9月4日-6日在苏州举行。
-                        </div>
-                        <a class="btn activity-btn" href="activity1.html">
-                            <span>了解更多</span>
-                        </a>
-                    </div>
-                    <div class="hot-activity">
-                        <div class="date"> <span class="day">12</span> <span class="month">2020/09</span></div>
-                        <div class="title">Concmix智慧病理全流程创新平台获自主创新专项资金支持</div>
-                        <div class="desc">
-                            根据上海推进科技创新中心建设办公室的最新公告，Concmix医学病理诊断中心的「智慧病理全流程创新平台」项目，因直击行业痛点、推进国家医改目标的落地，获得上海张江国家自主创新示范区专项发展资金的支持。
-                        </div>
-                        <a class="btn activity-btn" href="activity2.html">
-                            <span>了解更多</span>
-                        </a>
-                    </div>
-                    <div class="hot-activity">
-                        <div class="date"> <span class="day">06</span> <span class="month">2021/01</span></div>
-                        <div class="title">全数字化智能病理解决方案，基层与三甲各取所需</div>
-                        <div class="desc">
-                            2020年末，上海申康医院发展中心主持开展的《基于人工智能的病理诊断与报告信息系统》建设项目成果揭晓，由Concmix医学病理诊断中心（以下简称「Concmix病理」）承接的子项目顺利完成验收，并荣获上海申康医院发展中心2020年度「医联工程优秀应用奖」。
-                        </div>
-                        <a class="btn activity-btn" href="activity3.html">
-                            <span>了解更多</span>
-                        </a>
-                    </div>
-                    <div class="hot-activity">
-                        <div class="date"> <span class="day">20</span> <span class="month">2020/12</span></div>
-                        <div class="title">明年3月1日起，这条新规将影响病理诊断地位</div>
-                        <div class="desc">
-                            12月24日，国家卫生健康委发布了《关于印发抗肿瘤药物临床应用管理办法（试行）》，其中规定，原则上，在病理确诊结果出具前，医师不得开具抗肿瘤药物进行治疗。
-                        </div>
-                        <a class="btn activity-btn" href="activity4.html">
-                            <span>了解更多</span>
-                        </a>
-                    </div>
-                    <div class="thumbnail-box">
-                        <a class="thumbnail-img active" href="activity1.html">
-                            <div class="img-cover">
-                                <span class="img-desc">
-                                    展示中
-                                </span>
-                            </div>
-                            <img src="../../../public/images/productions/plant3.jpg">
-                        </a>
-                        <a class="thumbnail-img" href="activity2.html">
-                            <div class="img-cover">
-                                <span class="img-desc">
-                                    展示中
-                                </span>
-
-                            </div>
-                            <img src="../../../public/images/productions/plant3.jpg">
-                        </a>
-                        <a class="thumbnail-img" href="activity3.html">
-                            <div class="img-cover">
-                                <span class="img-desc">
-                                    展示中
-                                </span>
-
-                            </div>
-                            <img src="	
-../../../public/images/productions/plant3.jpg" alt="">
-                        </a>
-                        <a class="thumbnail-img" href="activity4.html">
-                            <div class="img-cover">
-                                <span class="img-desc">
-                                    展示中
-                                </span>
-
-                            </div>
-                            <img src="
-../../../public/images/productions/plant3.jpg" alt="">
-                        </a>
-                    </div>
-                </div>
-
-            </div>
-        </div> -->
-
         <!-- 底部 -->
         <div class="footer">
             <div class="footer-container">
                 <div class="container-info">
                     <div class="info-group">
                         <div class="info-logo">
-                            <img id="logo-img" src="../../../public/images/face/concmix-logo-white.png" alt="">
+                            <img id="logo-img"
+                                src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/concmix-logo-white.png" alt="">
                         </div>
                         <div class="info-tel">(86)18339821170</div>
 
@@ -502,7 +315,8 @@
                             <div class="code-img-box">
                                 <div class="img-group">
                                     <div class="img-box">
-                                        <img src="../../../public/images/face/whatsAPP.png" alt="">
+                                        <img src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/whatsAPP.png"
+                                            alt="">
                                     </div>
                                     <div class="code-info">whatsAPP</div>
                                 </div>
@@ -514,11 +328,13 @@
                     <p class="footer-bot">
                         <span>联系我们</span>
                         <span class="contact-item"><img style="width: 10px;"
-                                src="../../assets/images/location-white.svg" alt="">
+                                src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/location-white.svg" alt="">
                             中国河南省郑州市</span>
-                        <span class="contact-item"> <img style="width: 16px;" src="../../assets/images/email-white.svg"
+                        <span class="contact-item"> <img style="width: 16px;"
+                                src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/email-white.svg"
                                 alt="">concmix@outlook.com</span>
-                        <span class="contact-item"><img style="width: 10px;" src="../../assets/images/tel-white.svg"
+                        <span class="contact-item"><img style="width: 10px;"
+                                src="https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/tel-white.svg"
                                 alt="">(86)18339821170</span>
 
                     </p>
